deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
.component-block-map {
	user-select: none;

	.aspect-ratio-wrapper {
		position: relative;
		background: $colorLightGrey;
		padding: $sizeGrid * 2 $sizeGrid * 4;
		font-size: 0;
	}

	.map-content {
		@include size($sizeGrid * 9, auto);
		display: inline-block;
		vertical-align: bottom;
		position: relative;
		margin-bottom: $sizeGrid * 3;
		min-height: $sizeGrid * 12.5;

		.pagination-number {
			@include pos(-10px, auto, auto, 0);
			transform: translate(-50%, -50%);
			position: absolute;
		}

		.heading {
			margin-bottom: $sizeGrid;
		}
	}

	.map-image-wrapper {
		@include size(calc(100% - #{$sizeGrid * 9}), auto);
		display: inline-block;
		vertical-align: top;
	}

	.map-image {
		@include size(100%, auto);
		@include aspect-ratio(800px, 560px);

		.sequence-background,
		.component-image-sequence {
			@include coverer();
			@include size(100%);
		}
	}

	.component-map-slider {
		@include size(100%, $sizeGrid * 2);
		position: relative;
	}

	@include respond-to(X_LARGE) {
		.aspect-ratio-wrapper {
			padding: $sizeGrid * 2;
		}

	}

	@include respond-to(SMALL) {
		.aspect-ratio-wrapper {
			display: flex;
			flex-direction: column;
		}

		.map-image-wrapper {
			width: 100%;
			order: 0;
		}

		.map-content {
			order: 1;
			width: 100%;
			margin-top: $sizeGrid * 2;
			min-height: 0;
		}
	}
}

